<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_base"
        android:layout_width="@dimen/dialog_base_width"
        android:layout_height="@dimen/dialog_base_height">

        <TextView
            android:id="@+id/tv_dialog_title"
            style="@style/tv_default"
            android:textSize="@dimen/tv_title_dimen"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_dimen"
            android:text="@string/tip" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/default_dimen">

            <TextView
                android:id="@+id/tv_dialog_message"
                style="@style/tv_large"
                android:text="@string/logout_tip" />
        </FrameLayout>

        <include layout="@layout/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_left"
                style="@style/tv_default"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/default_dimen"
                android:textColor="@color/colorDefault"
                android:text="@string/cancel" />

            <include
                android:id="@+id/line_dialog_first"
                layout="@layout/line_vertical" />

            <TextView
                android:id="@+id/tv_dialog_center"
                style="@style/tv_default"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorDefault"
                android:padding="@dimen/default_dimen"
                android:text="@string/feed_back" />

            <include
                android:id="@+id/line_dialog_second"
                layout="@layout/line_vertical" />

            <TextView
                android:id="@+id/tv_dialog_right"
                style="@style/tv_default"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorDefault"
                android:padding="@dimen/default_dimen"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
