<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.hongcheng.thelearn.ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/large_dimen">

        <ImageView
            android:layout_width="@dimen/iv_logo"
            android:layout_height="@dimen/iv_logo"
            android:layout_marginBottom="@dimen/xlarge_dimen"
            android:layout_marginTop="@dimen/xlarge_dimen"
            android:scaleType="fitXY"
            android:src="@mipmap/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                style="@style/text_input_et"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password"
                style="@style/text_input_et"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/bt_login"
            style="@style/bt_bottom"
            android:text="@string/login" />

    </LinearLayout>
</LinearLayout>
